phone: Add option for setting device phone number (squashed)
Squashed commit of the following, with some more cleanup :)
(from gingerbread)

commit 53aaa90d95c83fff8f869c187cc291f51d3be6a6
Author: Pawit Pornkitprasan <p.pawit@gmail.com>
Date:   Thu Nov 24 12:01:03 2011 +0700

    Whitespace fixes

commit d98314c62fa371c7a8bbcda0d5221eb1b72cd639
Author: Pawit Pornkitprasan <p.pawit@gmail.com>
Date:   Tue Aug 30 23:15:07 2011 +0700

    Phone: Set MSISDN on boot from saved setting if SIM returned empty "My Phone Number"

    Some carriers don't set the MSISDN (My Phone Number) and CM remedied
    that by adding a setting in "Additional settings" in Call Settings
    which saves a new MSISDN to the SIM. However, some phones fails to
    save the MSISDN to the SIM and another remedy was added to set it
    every boot from the stored value. However, the current implementation
    only sets it if the framework returns a null value. This patch also
    sets it if the framework returns an empty string.

    Patch Set 3:
    - Fixed simstate checking as the intent extra is a string not an
      integer
    - Removed airplane mode checking as simstate will be triggered anyway

    Change-Id: If8875b841d2029be12f367ab6f309bbfb81fc330
    (cherry picked from commit 4045310b01b3c74fb06be69809f57be7d85dd32a)

commit 10959fc16e91bff31ed136fc609b6035777efacf
Author: Ricardo Cerqueira <cyanogenmod@cerqueira.org>
Date:   Sat Aug 27 00:35:25 2011 +0100

    Phone: Fix race condition in BOOT_COMPLETED intent

    BOOT_COMPLETED was triggering a read (and write) of SIM extra
    fields, regardless of whether the SIM was actually ready for it
    or not.
    If the boot happened to complete before the radio layer
    was ready, we were trying to do iccIO before we were allowed to.
    This resulted in errors for most phones, but on at least one it caused
    the whole iccIO interface to lock up until the next reboot (where the
    same would probably happen again)

    So... trigger the 

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -15,6 +15,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
     <!-- Advanced Settings -->
     <string name="advanced_setting">Advanced Settings</string>
     <string name="show_ssn_label">Event notification</string>
@@ -72,4 +73,31 @@
     <string name="call_notif_callconnectingect">Call connecting through explicit call transfer</string>
     <!-- Toast text for incoming call connected through ECT -->
     <string name="call_notif_callconnectedect">Call connected through explicit call transfer</string>
+
+    <!-- Manual PLMN scan data disconnect dialog text -->
+    <string name="disconnect_data_confirm">Data service needs to be disconnected temporarily. Are you sure you want to continue?</string>
+
+    <!-- IMS settings related strings -->
+    <!-- Title of the ims editor screen. [CHAR LIMIT=NONE] -->
+    <string name="ims_edit_title">IMS account details</string>
+    <!-- Title displayed IMS account settings in the sip settings category. [CHAR LIMIT=NONE] -->
+    <string name="ims_accounts_title">IMS accounts</string>
+
+    <!-- VT call quality settings. -->
+    <string translatable="false" name="ims_vt_call_quality">VtCallQuality</string>
+    <string name="ims_vt_call_quality_title">Video call quality</string>
+    <string name="ims_vt_call_quality_low">Low</string>
+    <string name="ims_vt_call_quality_high">High</string>
+    <string name="ims_vt_call_quality_unknown">Unknown</string>
+    <string name="ims_vt_call_quality_set_failed">Failed to set video quality</string>
+
+    <!-- Permission for notification-bar network toggle -->
+    <string name="perm_change_mobile_network">change network mode (2G/3G)</string>
+    <string name="perm_change_mobile_network_desc">Allows the app to change between 2G data and 3G data at any time. 3G is faster, but consumes more battery and may cause additional cost.</string>
+
+    <!-- My Phone Number -->
+    <string name="phone_number_label">My phone number</string>
+    <string name="phone_number_summary">Set the phone number for this device</string>
+    <string name="msisdn_alpha_tag" translatable="false">Voice Line 1</string>
+
 </resources>
