Add uplmn setting for USIM
Add preference "preferred network" in settings for USIM.
Add two activities for user to search and edit plmn.

Change-Id: Iaab46cd26f6c0e75439dc56409ddbc8e5ef57dff

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -149,4 +149,6 @@
 
     <!-- Allows the telephony HFA logic to run even if we're not in setup wizard. -->
     <bool name="config_allow_hfa_outside_of_setup_wizard">true</bool>
+    <!-- whether to show uplmn preference for usim -->
+    <bool name="config_uplmn_for_usim">false</bool>
 </resources>
