XDivert changes for MSIM
Add xdivert setting option  in MSIM call settings

Conflicts:
	src/com/android/phone/CallFeaturesSetting.java

Change-Id: I94731ba1a03c19c8363643f12eda3fdd358dcd0a

--- a/res/xml/call_feature_setting_msim.xml
+++ b/res/xml/call_feature_setting_msim.xml
@@ -76,4 +76,15 @@
         android:title="@string/enable_video_calling_title"
         android:persistent="true"
         android:defaultValue="true" />
+
+      <PreferenceScreen
+          android:key="button_xdivert"
+          android:title="@string/xdivert_title"
+          android:summary="@string/xdivert_summary"
+          android:persistent="false">
+          <intent android:action="android.intent.action.MAIN"
+                  android:targetPackage="com.qti.xdivert"
+                      android:targetClass="com.qti.xdivert.XDivertSetting" />
+      </PreferenceScreen>
+
 </PreferenceScreen>
