MSIM: Call feature settings, subInfo changes
- Add checks while accessing displayName from subInfoRecord
- Add default outgoing and sim call manager account settings
  into MSIM callfeature settings xml.

Change-Id: I589bbfe8a66c04f5affa17878a2675887804fe0f

--- a/res/xml/call_feature_setting_msim.xml
+++ b/res/xml/call_feature_setting_msim.xml
@@ -36,13 +36,11 @@
       android:title="@string/other_settings"
       android:persistent="false" />
 
-    <Preference
-            android:key="phone_accounts"
-            android:title="@string/phone_accounts" >
-        <intent
-                android:targetClass="com.android.telecomm.PhoneAccountPreferencesActivity"
-                android:targetPackage="com.android.telecomm" />
-    </Preference>
+    <com.android.phone.settings.AccountSelectionPreference
+        android:key="default_outgoing_account"
+        android:title="@string/phone_accounts_make_calls_with"
+        android:defaultValue=""
+        android:persistent="false" />
 
     <CheckBoxPreference
         android:key="button_auto_retry_key"
@@ -76,6 +74,12 @@
         android:title="@string/enable_video_calling_title"
         android:persistent="true"
         android:defaultValue="true" />
+
+    <com.android.phone.settings.AccountSelectionPreference
+        android:key="wifi_call_manager_account"
+        android:title="@string/phone_account_wifi_calling"
+        android:defaultValue=""
+        android:persistent="false" />
 
       <PreferenceScreen
           android:key="button_xdivert"
