Disable data in manual PLMN search
While doing manual PLMN search disable data if it is connected
once search done enable data connection.
Change-Id: I6da10deb2d71d7a696a84b4faab3414a26b5fa7f
CRs-Fixed: 604803

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -151,4 +151,6 @@
     <bool name="config_allow_hfa_outside_of_setup_wizard">true</bool>
     <!-- whether to show uplmn preference for usim -->
     <bool name="config_uplmn_for_usim">false</bool>
+    <!-- Disable data before manual PLMN scan if true-->
+    <bool name="config_disable_data_manual_plmn">true</bool>
 </resources>
