--- a/res/xml/msim_call_feature_sub_setting.xml
+++ b/res/xml/msim_call_feature_sub_setting.xml
@@ -79,6 +79,13 @@
           android:targetClass="com.android.phone.FdnSetting" />
   </PreferenceScreen>
 
+    <com.android.phone.DefaultRingtonePreference
+        android:key="button_ringtone_key"
+        android:title="@string/ringtone_title"
+        android:dialogTitle="@string/ringtone_title"
+        android:persistent="false"
+        android:ringtoneType="ringtone" />
+
     <PreferenceScreen
         android:key="button_gsm_more_expand_key"
         android:title="@string/labelGSMMore"
