MSIM: Update phone account settings activity name
Modify phone account settings activity name in msim
call settings xml file as per its base xml file.

Change-Id: I143611cd0901c688654a23cd84d52372597d61ce
CRs-Fixed: 738632

--- a/res/xml/call_feature_setting_msim.xml
+++ b/res/xml/call_feature_setting_msim.xml
@@ -18,7 +18,7 @@
 -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
-    android:title="@string/call_settings">
+    android:title="@string/updating_title">
 
     <!-- target class is com.android.phone.MultiSimSetting -->
   <PreferenceScreen
@@ -36,11 +36,15 @@
       android:title="@string/other_settings"
       android:persistent="false" />
 
-    <com.android.phone.settings.AccountSelectionPreference
-        android:key="default_outgoing_account"
-        android:title="@string/phone_accounts_make_calls_with"
-        android:defaultValue=""
-        android:persistent="false" />
+    <PreferenceScreen
+        android:key="phone_account_settings_preference_screen"
+        android:title="@string/phone_account_settings">
+
+        <intent
+            android:targetPackage="com.android.phone"
+            android:targetClass="com.android.phone.settings.PhoneAccountSettingsActivity"/>
+
+    </PreferenceScreen>
 
     <CheckBoxPreference
         android:key="button_auto_retry_key"
@@ -74,12 +78,6 @@
         android:title="@string/enable_video_calling_title"
         android:persistent="true"
         android:defaultValue="true" />
-
-    <com.android.phone.settings.AccountSelectionPreference
-        android:key="wifi_call_manager_account"
-        android:title="@string/phone_account_wifi_calling"
-        android:defaultValue=""
-        android:persistent="false" />
 
       <PreferenceScreen
           android:key="button_xdivert"
