--- a/res/xml/call_feature_setting.xml
+++ b/res/xml/call_feature_setting.xml
@@ -150,4 +150,88 @@
             android:targetClass="com.android.phone.ImsEditor" />
     </PreferenceScreen>
 
+    <CheckBoxPreference
+        android:key="duration_enable_key"
+        android:persistent="false"
+        android:title="@string/preferred_duration_title"
+        android:summaryOn="@string/duration_enable_summary"
+        android:summaryOff="@string/duration_disable_summary" />
+
+    <CheckBoxPreference
+      android:key="button_proximity_key"
+      android:title="@string/proximity_mode_title"
+      android:persistent="false"
+      android:summary="@string/proximity_on_summary" />
+
+    <CheckBoxPreference
+      android:key="button_vibrate_after_connected"
+      android:title="@string/vibrate_after_connected_title"
+      android:persistent="false"
+      android:defaultValue="true"
+      android:summary="@string/vibrate_after_connected_summary" />
+
+    <PreferenceScreen
+        android:key="button_ipprefix_key"
+        android:title="@string/ipcall_sub_title"
+        android:summary="@string/ipcall_sub_summery"
+        android:persistent="false">
+    </PreferenceScreen>
+
+    <PreferenceScreen
+        android:key="speed_dial_settings"
+        android:title="@string/speed_dial_setting"
+        android:persistent="false">
+        <intent
+            android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.dialer"
+            android:targetClass="com.android.dialer.SpeedDialListActivity"/>
+    </PreferenceScreen>
+
+    <!-- Add videocall settings menu  -->
+    <PreferenceCategory
+        android:key="button_videocall_settings_key"
+        android:title="@string/videocall_settings"
+        android:persistent="false" />
+        <PreferenceScreen
+            android:key="videocall_setting_fb_key"
+            android:summary="@string/vt_fallback_setting_sum"
+            android:title="@string/vt_fallback_setting" >
+            <intent
+                android:action="android.intent.action.MAIN"
+                android:targetClass="com.borqs.videocall.FallBackSetting"
+                android:targetPackage="com.borqs.videocall" />
+        </PreferenceScreen>
+        <PreferenceScreen
+            android:key="videocall_setting_fw_key"
+            android:summary="@string/vt_forward_setting_sum"
+            android:title="@string/vt_forward_setting"
+            android:persistent="false" >
+            <intent
+                android:action="android.intent.action.MAIN"
+                android:targetClass="com.borqs.videocall.VTCallForwardOptions"
+                android:targetPackage="com.borqs.videocall" />
+        </PreferenceScreen>
+        <PreferenceScreen
+            android:key="vt_imageplacer"
+            android:persistent="false"
+            android:summary="@string/vt_imagereplace_setting_sum"
+            android:title="@string/vt_imagereplace_setting" >
+            <intent
+                android:action="android.intent.action.MAIN"
+                android:targetClass="com.borqs.videocall.VTImageReplaceSetting"
+                android:targetPackage="com.borqs.videocall" />
+        </PreferenceScreen>
+    <PreferenceCategory
+        android:key="pref_advanced_settings"
+        android:title="@string/advanced_settings">
+
+         <PreferenceScreen
+             android:key="button_blacklist"
+             android:title="@string/blacklist_title"
+             android:persistent="false">
+             <intent android:action="android.intent.action.MAIN"
+                 android:targetPackage="com.android.settings"
+                 android:targetClass="com.android.settings.Settings$BlacklistSettingsActivity" />
+         </PreferenceScreen>
+    </PreferenceCategory>
 </PreferenceScreen>
