Revert "Phone: Sprint MWI Quirk: Phantom message wait indicator workaround (2/2)"
This reverts commit 076adcc66862a813fcf07dd2806e149afc1b0095.

Conflicts:
	res/values/cm_strings.xml

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -23,9 +23,23 @@
     <string name="blacklist_summary_disabled">Disabled</string>
     <string name="blacklist_summary">Incoming calls from phone numbers in the blacklist will be blocked</string>
 
-    <!-- Sprint MWI Quirk: Phantom message wait indicator workaround -->
-    <string name="mwi_notification_title">Message wait indicator</string>
-    <string name="mwi_notification_summary">Show message wait indicator voicemail notifications</string>
+    <!-- Number lookup -->
+    <string name="number_lookup">Phone number lookup</string>
+    <string name="enable_forward_lookup_title">Forward lookup</string>
+    <string name="enable_forward_lookup_summary">Show nearby places when searching in the dialer</string>
+    <string name="enable_people_lookup_title">People lookup</string>
+    <string name="enable_people_lookup_summary">Show online results for people when searching in the dialer</string>
+    <string name="enable_reverse_lookup_title">Reverse lookup</string>
+    <string name="enable_reverse_lookup_summary">Look up information about the person or place for unknown numbers on incoming calls</string>
+    <string name="choose_lookup_providers">Choose lookup providers</string>
+    <string name="choose_forward_lookup_provider_title">Choose forward lookup provider</string>
+    <string name="choose_people_lookup_provider_title">Choose people lookup provider</string>
+    <string name="choose_reverse_lookup_provider_title">Choose reverse lookup provider</string>
+
+    <!-- Chinese Reverse Lookup Provider -->
+    <string name="cyngn_reverse_lookup_provider_package" translatable="false">com.cyngn.chineselocationlookup</string>
+    <string name="cyngn_reverse_lookup_provider_name">Cyngn Chinese (CN)</string>
+    <string name="cyngn_reverse_lookup_provider_value" translatable="false">CyngnChinese</string>
 
     <!-- Toasts for various transient network events -->
     <!-- Toast text for Unconditional Call Forwarding enabled  -->
